--- a/Z-Pawn/src/main/resources/templates/error/403.html
+++ b/Z-Pawn/src/main/resources/templates/error/403.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Access Denied</title>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.1.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
 <div>
