account root default initialize

--- a/Z-Pawn/src/main/resources/templates/index.html
+++ b/Z-Pawn/src/main/resources/templates/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Access Denied</title>
+    <title>Index</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
 <div>
-    <h1>Access denied</h1>
-    <p><a href="/" th:href="@{/}">Back to home page</a></p>
+    <h1>Index</h1>
+    <p><a href="/" th:href="@{/login}">Login</a></p>
 </div>
 </body>
 </html>
