--- a/Z-Pawn/src/main/resources/templates/fragments/form.html
+++ b/Z-Pawn/src/main/resources/templates/fragments/form.html
@@ -12,7 +12,7 @@
 			<h4 class="float-left mt-2">Messages : Create</h4>
 			<div class="clearfix"></div>
 			<form id="messageForm" th:action="@{/(form)}" th:object="${device}" action="#" method="post">
-				<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger" role="alert">
+				<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger" phone="alert">
 					<p th:each="error : ${#fields.errors('*')}" class="m-0" th:text="${error}">Validation error</p>
 				</div>
 				<input type="hidden" th:field="*{id}" th:class="${'form-control' + (#fields.hasErrors('id') ? ' is-invalid' : '')}"/>
