--- a/Z-Referee/src/main/resources/public/app.css
+++ b/Z-Referee/src/main/resources/public/app.css
@@ -8,8 +8,8 @@ layout-passport > .container {
     background-repeat: repeat !important;
     background-size: cover !important;
     background-color: #fff !important;
-    /*background-image: url(./login-img.png) !important;*/
-    background-image: url(https://www.erupt.xyz/demo/login-bg.svg) !important;
+    background-image: url(./login-favicon.ico) !important;
+    /*background-image: url(https://www.erupt.xyz/demo/login-bg.svg) !important;*/
 }
 
 layout-passport .title {
